# titi

./: .gitignore  ARCHITECTURE.md  BATTLE_TEST_PLAN.md  BATTLE_TEST_SCENARIOS.md  Cargo.toml  GETTING_STARTED.md  HEADLESS_TEST_STATUS.md  IMPLEMENTATION_PLAN_100PCT.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_STATUS.md  LICENSE  MEMORY_LEAK_DETECTION.md  README.md  SECURITY_ANALYSIS.md  SECURITY_FIXES.md  SECURITY_RECOMMENDATIONS.md  SUMMARY.md  TDD_TEST_PLAN.md  TESTING.md  TEST_FAILURES_ANALYSIS.md  TEST_RESULTS.md
benchmark_results/: benchmark_20251216_180559.txt
docs/: AIDER_COMPATIBILITY.md  BATTLE_TESTS_GUIDE.md
scripts/: benchmark_performance.sh  profile_performance.sh  run_tests.sh
src/: config.rs  headless.rs  lib.rs  main.rs  metrics.rs
src/redititi_server/: auth.rs  channels.rs  commands.rs  mod.rs  protocol.rs  redititi_tcp_server.rs  registry.rs
src/renderer/: glyph_atlas.rs  gpu_state.rs  mod.rs  text_renderer.rs  vertex.rs
src/renderer/shaders/: text.wgsl
src/server/: auth.rs  mod.rs  registry.rs  tcp_server.rs
src/server_client/: mod.rs
src/terminal/: grid.rs  mod.rs  parser.rs  pty.rs
src/ui/: layout.rs  mod.rs  pane.rs
tests/: regression.rs
tests/battle/: long_running_stability.rs  multi_agent_orchestration.rs  network_disruption.rs  real_app_integration.rs  resource_exhaustion.rs  security_edge_cases.rs  timing_edge_cases.rs  unicode_edge_cases.rs
tests/headless/: mod.rs  scenario_interactive_programs.rs  scenario_multi_agent.rs  scenario_network_resilience.rs  scenario_resource_leak.rs  scenario_unicode_torture.rs  stress_command_injection.rs  stress_large_output.rs  stress_long_running.rs  stress_multi_instance.rs  stress_rapid_lifecycle.rs  verify_basic.rs
tests/integration/: server_integration_tests.rs
tests/stress/: concurrency.rs  memory_leak_detection.rs  performance.rs
tests/terminal/: dirty_tracking_tests.rs  grid_tests.rs  parser_tests.rs  text_extraction_tests.rs
