[package]
name = "titi"
version = "0.1.0"
edition = "2021"
authors = ["Titi Contributors"]
description = "A GPU-accelerated terminal emulator with hierarchical tabs"
license = "MIT"

[dependencies]
# GPU rendering
wgpu = "23.0"
winit = "0.30"
pollster = "0.4"

# Terminal emulation
vte = "0.13"
portable-pty = "0.8"

# Font rendering
cosmic-text = "0.12"

# Utilities
anyhow = "1.0"
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
crossbeam-channel = "0.5"
dirs = "5.0"
lazy_static = "1.4"
bytemuck = { version = "1.14", features = ["derive"] }
arboard = "3.4"
clap = { version = "4.5", features = ["derive"] }

# Server dependencies
tokio = { version = "1.0", features = ["full"] }
rand = "0.8"

[[bin]]
name = "redititi"
path = "src/bin/redititi.rs"

[[test]]
name = "grid_tests"
path = "tests/terminal/grid_tests.rs"

[[test]]
name = "parser_tests"
path = "tests/terminal/parser_tests.rs"

[[test]]
name = "dirty_tracking_tests"
path = "tests/terminal/dirty_tracking_tests.rs"

[[test]]
name = "text_extraction_tests"
path = "tests/terminal/text_extraction_tests.rs"

[[test]]
name = "performance"
path = "tests/stress/performance.rs"

[[test]]
name = "concurrency"
path = "tests/stress/concurrency.rs"

[[test]]
name = "memory_leak_detection"
path = "tests/stress/memory_leak_detection.rs"

[[test]]
name = "regression"
path = "tests/regression.rs"

[[test]]
name = "server_integration_tests"
path = "tests/integration/server_integration_tests.rs"

# Battle tests
[[test]]
name = "battle_multi_agent"
path = "tests/battle/multi_agent_orchestration.rs"

[[test]]
name = "battle_real_apps"
path = "tests/battle/real_app_integration.rs"

[[test]]
name = "battle_network"
path = "tests/battle/network_disruption.rs"

[[test]]
name = "battle_resources"
path = "tests/battle/resource_exhaustion.rs"

[[test]]
name = "battle_security"
path = "tests/battle/security_edge_cases.rs"

[[test]]
name = "battle_stability"
path = "tests/battle/long_running_stability.rs"

[[test]]
name = "battle_unicode"
path = "tests/battle/unicode_edge_cases.rs"

[[test]]
name = "battle_timing"
path = "tests/battle/timing_edge_cases.rs"

# ============================================================================
# HEADLESS MODE TEST SUITE
# ============================================================================

# Stress Tests (5 tests)

[[test]]
name = "headless_stress_command_injection"
path = "tests/headless/stress_command_injection.rs"

[[test]]
name = "headless_stress_large_output"
path = "tests/headless/stress_large_output.rs"

[[test]]
name = "headless_stress_multi_instance"
path = "tests/headless/stress_multi_instance.rs"

[[test]]
name = "headless_stress_long_running"
path = "tests/headless/stress_long_running.rs"

[[test]]
name = "headless_stress_rapid_lifecycle"
path = "tests/headless/stress_rapid_lifecycle.rs"

# Complex Scenario Tests (5 tests)

[[test]]
name = "headless_scenario_network_resilience"
path = "tests/headless/scenario_network_resilience.rs"

[[test]]
name = "headless_scenario_multi_agent"
path = "tests/headless/scenario_multi_agent.rs"

[[test]]
name = "headless_scenario_interactive_programs"
path = "tests/headless/scenario_interactive_programs.rs"

[[test]]
name = "headless_scenario_unicode_torture"
path = "tests/headless/scenario_unicode_torture.rs"

[[test]]
name = "headless_scenario_resource_leak"
path = "tests/headless/scenario_resource_leak.rs"

[[test]]
name = "headless_verify_basic"
path = "tests/headless/verify_basic.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
